# pipedream-automation

./: .coderabbit.yaml  .coverage  .coveragerc  .cursor-rules.yaml  .env.local.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  bundle.config.json  codecov.yml  coverage.xml  last-test-run.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.claude/commands/: deploy_to_pd.md
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
config/: pipedream-mapping.yaml
deployment/: DEPLOYMENT_GUIDE.md
deployment/scripts/: bundle_for_pipedream.py  bundle_for_pipedream_v2.py  update_imports.py
deployment/templates/: calendar_to_notion_bundled.py  gmail_to_notion_bundled.py  notion_to_gcal_bundled.py  notion_update_handler_bundled.py
docs/: DEPLOY_IMPLEMENTATION.md  GMAIL_TO_NOTION_CONFIGURATION_GUIDE.md
pipedream/components/: README.md
pipedream/workflows/: gcal-to-notion.js  gmail-to-notion.js  gmail-to-notion.yaml  notion-to-gcal.js
scripts/: bundle_for_pipedream_v2.py  extract_cookies.py  extract_cookies_auto.py  extract_cookies_google.py
spec/: deployment-strategy.md
src/: __init__.py
src/deploy/: __init__.py  config.py  deploy_to_pipedream.py  exceptions.py  selectors.py  utils.py
src/integrations/: ai_content_processor.py
src/steps/: __init__.py  analyze_email_with_claude.py  create_notion_task.py  fetch_gmail_emails.py  gcal_event_to_notion.py  google_to_notion.py  label_gmail_processed.py  notion_task_to_gcal.py  notion_task_to_google.py  notion_update_to_gcal.py  notion_update_to_google.py  update_horizon_scores.py
src/utils/: __init__.py  common_utils.py  (+4 more)
tests/: __init__.py  conftest.py  test_ai_content_processor.py  test_content_processing.py  test_create_notion_task.py  test_example.py  test_fetch_gmail_emails.py  test_gcal_event_to_notion.py  test_google_to_notion.py  test_horizon_scores.py  test_label_gmail_processed.py  test_notion_task_to_gcal.py  test_notion_task_to_google.py  test_notion_update_to_gcal.py  test_notion_update_to_google.py
(+39 files in other folders)
